<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FazhufuActivity">




    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/shipin"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <master.flame.danmaku.ui.widget.DanmakuView
        android:id="@+id/fazhufu_danmaku"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView

        android:id="@+id/topic"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:text="祝福类型"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/shipin"
        app:layout_constraintStart_toStartOf="parent"/>

    <ToggleButton
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:checked="false"
        android:text="1"
        android:background="@drawable/fazhufu_1"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="@id/topic"
        app:layout_constraintTop_toBottomOf="@id/topic" />

    <TextView

        android:id="@+id/message1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="生日祝福"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="@id/btn1"/>


    <ToggleButton
        android:checked="false"
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:textOn="1"
        android:textOff="1"
        android:textSize="0sp"
        android:background="@drawable/fazhufu_4"
        app:layout_constraintStart_toStartOf="@id/topic"
        app:layout_constraintTop_toBottomOf="@id/topic" />

    <TextView
        android:id="@+id/message2"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="友情祝福"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        app:layout_constraintStart_toStartOf="@id/btn2"/>

    <ToggleButton
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="184dp"
        android:textOn="1"
        android:textOff="1"
        android:checked="false"
        android:textSize="0sp"
        android:background="@drawable/fazhufu_3"
        app:layout_constraintStart_toStartOf="@id/topic"
        app:layout_constraintTop_toBottomOf="@id/topic" />

    <TextView
        android:id="@+id/message3"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="爱情祝福"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        app:layout_constraintStart_toStartOf="@id/btn3"/>

    <ToggleButton
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="272dp"
        android:background="@drawable/fazhufu_2"
        android:textOn="1"
        android:textOff="1"
        android:checked="false"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="@id/topic"
        app:layout_constraintTop_toBottomOf="@id/topic" />

    <TextView
        android:id="@+id/message4"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="新年祝福"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toStartOf="@id/btn4"/>

    <TextView
        android:id="@+id/fabiao"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:text="请发表祝福"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/message1"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/fabianzhufu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:background="@drawable/fanzhufu_et"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:hint="请输入祝福内容"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/fabiao"

        />
    <ImageView
        android:id="@+id/fanzhufu_image"
        android:layout_width="150dp"

        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/upload"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintTop_toBottomOf="@id/test_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fazhufu_fason"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/fanzhufu_btn"
        android:text="发表"
        android:textColor="#fff"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabianzhufu" />

    <TextView
        android:id="@+id/test_text"
        android:layout_width="230dp"
        android:layout_height="40dp"

        android:layout_marginBottom="184dp"
        android:gravity="center"
        android:text="请选择想要上传的图片"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fabianzhufu"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="(每次只能上传一张图片)"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/test_text"

        app:layout_constraintTop_toTopOf="@id/test_text" />



</androidx.constraintlayout.widget.ConstraintLayout>